--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@nestjs/core": "^11.0.7",
     "@nestjs/platform-express": "^11.0.7",
     "@nestjs/testing": "^11.0.7",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "bullmq": "^5.40.0",
     "dotenv": "^16.4.7",
     "ioredis": "^5.4.2",
     "pino": "^9.6.0",
     "pino-pretty": "^13.0.0",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
