RabbitMQ integrations / Prometeus integration / Doc update

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^11.0.7",
     "@nestjs/testing": "^11.0.7",
     "@willsoto/nestjs-prometheus": "^6.0.2",
+    "amqplib": "^0.10.5",
     "bullmq": "^5.40.0",
     "dotenv": "^16.4.7",
     "ioredis": "^5.4.2",
