--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,20 @@ version: '3'
 services:
   prometheus:
     image: prom/prometheus
+    container_name: prometheus
     ports:
       - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
 
   grafana:
     image: grafana/grafana
+    container_name: grafana
     ports:
       - "3000:3000"
+
   redis:
     image: redis:latest
     container_name: redis-task-queue
